Configured Start Page

--- a/FixerExchange/index.html
+++ b/FixerExchange/index.html
@@ -5,6 +5,6 @@
 	<meta charset="utf-8" />
 </head>
 <body>
-    Yes!
+    Visit <a href="https://bisileesh.github.io/Currency-Exchange/">https://bisileesh.github.io/Currency-Exchange/</a> for more info!
 </body>
 </html>
